<resources>
    <string name="app_name" translatable="false">HikeMate</string>
    <string name="hello_world">Hello World!</string>
    <string name="start_fragment1">Comprehensive Hike Details Entry</string>
    <string name="start_fragment2">Efficient Database Management</string>
    <string name="start_fragment3">Detailed Hike Observations</string>
    <string name="start_fragment4">Advanced Search Functionality</string>
    <string name="getting_started">Getting Started</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="skip">Skip</string>
    <string name="name_of_hike">Name of Hike</string>
    <string name="length_of_hike">Length of Hike</string>
    <string name="date_of_hike">Date of Hike</string>
    <string name="location">Location</string>
    <string name="level_of_difficulty">Level of Difficulty</string>
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="difficult">Difficult</string>
    <string name="parking_available">Parking Available?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image">Image</string>
    <string name="select_image">Select</string>
    <string name="please_select_an_image">Please select an image!</string>
    <string name="clear_all">Clear all</string>
    <string name="view_hike_list">View Hike List</string>
    <string name="create">Create</string>
    <string name="hike_list">Hike List</string>
    <string name="create_hike">Create Hike</string>
    <string name="location_label">Location:</string>
    <string name="date_of_hike_label">Date of Hike:</string>
    <string name="length_of_hike_label">Length of Hike:</string>
    <string name="length_km">Length (km)</string>
    <string name="observation_list">Observation List</string>
    <string name="view_observation">View Observation</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="name">Name</string>
    <string name="danger_lever">Danger Level:</string>
    <string name="description">Description</string>
    <string name="how_to_respond">How to respond ?</string>
    <string name="animals_and_plants">Documents about survival knowledge</string>
    <string name="animal_classification">Animal classification</string>
    <string name="plant_classification">Plant classification</string>
    <string name="survival_skills">Survival skills</string>
    <string name="before_talking_about_those_fancy_basic_hiking_skills_let_s_start_with_the_basics_first_the_general_rule_never_ever_attempt_a_new_hike_without_proper_research_and_planning_you_know_how_dangerous_it_is_because_it_is_so_risky_and_there_are_so_many_uncertainties_in_the_forest_or_mountain">Before talking about those fancy basic hiking skills, let’s start with the basics first. The general rule: never ever attempt a new hike without proper research and planning. You know how dangerous it is because it is so risky and there are so many uncertainties in the forest or mountain.</string>
    <string name="the_animal_kingdom_comprises_organisms_capable_of_independent_movement_such_as_marine_life_terrestrial_animals_and_species_inhabiting_the_skies_animals_exhibit_diverse_forms_and_behaviors_serving_crucial_roles_in_the_food_chain_and_acting_as_a_source_of_sustenance_raw_materials_and_medical_support_for_humans">The animal kingdom comprises organisms capable of independent movement, such as marine life, terrestrial animals, and species inhabiting the skies. Animals exhibit diverse forms and behaviors, serving crucial roles in the food chain and acting as a source of sustenance, raw materials, and medical support for humans.</string>
    <string name="the_plant_kingdom_encompasses_organisms_that_lack_the_ability_to_move_freely_primarily_including_grasses_and_various_types_of_trees_plants_play_a_vital_role_in_photosynthesis_producing_oxygen_and_providing_sustenance_for_many_other_organisms">The plant kingdom encompasses organisms that lack the ability to move freely, primarily including grasses and various types of trees. Plants play a vital role in photosynthesis, producing oxygen, and providing sustenance for many other organisms.</string>
    <string name="animals_list">Animals List</string>
    <string name="plants_list">Plants List</string>
    <string name="survival_skill_list">Survival skill List</string>
    <string name="no_hikes_have_been_added_yet">No hikes have been added yet!</string>
    <string name="setting">Setting</string>
    <string name="general">General</string>
    <string name="choose_your_language_to_use_the_app">Choose your language to use the app</string>
    <string name="language">Language</string>
    <string name="weather">Weather</string>
    <string name="choose_your_temperature_unit_to_use">Choose your temperature unit to use</string>
    <string name="the_current_is">The current is</string>
    <string name="chose_temperature_unit">Chose temperature unit</string>
    <string name="connect_to_internet_to_see_the_term_and_policy">Connect to internet to see the term and policy!</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="stay_at_home">Stay at home</string>
    <string name="bring_rain_gear">Bring rain gear</string>
    <string name="go_hike">Go hike</string>
    <string name="location_no_dot">Location</string>
    <string name="change">Change</string>
    <string name="current_location">Current location</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="max_min">Max/Min:</string>
    <string name="today_is_not_suitable_to">Today is not suitable to:</string>
    <string name="the_next_4_days">The next 4 days</string>
    <string name="please_enable_your_gps_to_receive_weather_information">Please enable your GPS to receive weather information</string>
    <string name="is_not_suitable_to">is not suitable to:</string>
    <string name="tiny_tip">Tiny tip</string>
    <string name="no_tips_for_the_next_4_days">No tips for the next 4 days</string>
    <string name="no_rain_forecast_in_the_next_4_days">No rain forecast in the next 4 days</string>
    <string name="it_is_raining_this">"It is raining this "</string>
    <string name="i_will_be_your_supporter_ask_me_something_that_you_need_to_know">I will be your supporter! Ask me something that you need to know !</string>
    <string name="failed_to_load_response_due_to">"Failed to load response due to "</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="connect_to_the_internet_to_use_the_weather_forecast">Connect to the internet to use the weather forecast!</string>
    <string name="empty">Empty</string>
    <string name="wind_nodot">Wind:</string>
    <string name="humidity_nodot">Humidity:</string>
    <string name="tap_to_receive_the_weather_at_your_location">Tap to receive the weather at your location!</string>
    <string name="create_observation">Create Observation</string>
    <string name="observation_name">Observation Name</string>
    <string name="observation_time">Observation Time</string>
    <string name="additional_comments">Additional Comments (Optional)</string>
    <string name="view_all">View All</string>
    <string name="capture">Capture</string>
    <string name="more_details">More Details</string>
    <string name="welcome_to_hike_mate">Welcome to Hike Mate!</string>
    <string name="new_hike">New Hike</string>
    <string name="supporter">Supporter</string>
    <string name="recent_hike_plan">Recent hike plan</string>
    <string name="no_hike_plan_please_inserting_the_new_one">No hike plan! Please inserting the new one!</string>
    <string name="sorting_list">Sorting by</string>
    <string name="all">All</string>
    <string name="date">Date</string>
    <string name="location_nodot">Location</string>
    <string name="length">Length</string>
    <string name="home">Home</string>
    <string name="hike">Hike</string>
    <string name="knowledge">Knowledge</string>
    <string name="reset_the_conversation">Reset the conversation</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="all_hike">All hike</string>
    <string name="chat_supporter">Chat supporter</string>
    <string name="other">Other</string>
    <string name="terms_of_condition">Terms of condition</string>
    <string name="clicking_to_search">Clicking to search</string>
    <string name="searching_animal">Searching animal</string>
    <string name="result">Result:</string>
    <string name="no_matching_result">No matching result</string>
    <string name="connect_to_internet_to_use_the_chat_bot">Connect to internet to use the chat bot!</string>
    <string name="write_here">Write here</string>
    <string name="confirm_hike">Confirm Hike</string>
    <string name="confirm">Confirm</string>
    <string name="map">Map</string>
    <string name="view_observation_list">View Observation List</string>
    <string name="observation_details">Observation details</string>
    <string name="searching_plant">Searching plant</string>
    <string name="searching_skill">Searching skill</string>
    <string name="terms">Terms</string>
    <string name="open_map">Open Map</string>
    <string name="the_best_choice_for_your_hiking_journey">The best choice for your hiking journey!</string>
    <string name="pick_image_from">Pick image from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="typing">"Typing… "</string>
    <string name="successful_added_the_hike_with_id">"Successful added the Hike with ID: "</string>
    <string name="location_settings_are_not_enabled">Location settings are not enabled.</string>
    <string name="location_permission_is_required_for_this_app_to_work">Location permission is required for this app to work.</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_hike">Delete hike</string>
    <string name="are_you_sure_you_want_to_delete_hike">"Are you sure you want to delete hike "</string>
    <string name="the_hike">"The hike "</string>
    <string name="was_removed">" was removed!"</string>
    <string name="undo">Undo</string>
    <string name="delete_all_hikes">Delete all hikes</string>
    <string name="are_you_sure_you_want_to_delete_all_hikes">Are you sure you want to delete all hikes ?</string>
    <string name="all_hikes_have_been_deleted">All hikes have been deleted!</string>
    <string name="comments">Comments</string>
    <string name="no_observations_have_been_added_yet">No observations have been added yet!</string>
    <string name="delete_observation">Delete observation</string>
    <string name="are_you_sure_you_want_to_delete_observation">"Are you sure you want to delete observation "</string>
    <string name="the_observation">"The observation "</string>
    <string name="the_image_is_to_large_please_select_another">The image is to large! Please select another!</string>
</resources>