<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/planning_items"
            android:title="@string/hike">
            <menu>
                <item
                    android:id="@+id/allPlan"
                    android:title="@string/all_hike"
                    android:icon="@drawable/plan"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/newPlan"
                    android:title="@string/new_hike"
                    android:icon="@drawable/new_plan"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

        <item
            android:id="@+id/chat"
            android:title="@string/chat_supporter">
            <menu>
                <item
                    android:id="@+id/chatSupporter"
                    android:icon="@drawable/chat"
                    android:title="@string/chat_supporter"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

        <item
            android:id="@+id/weatherForecast"
            android:title="@string/weather_forecast">
            <menu>
                <item
                    android:id="@+id/weather"
                    android:icon="@drawable/ic_weather"
                    android:title="@string/weather_forecast"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

        <item
            android:id="@+id/others"
            android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_setting"
                    android:title="@string/setting"
                    android:checkable="true"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/term"
                    android:icon="@drawable/ic_license"
                    android:title="@string/terms_of_condition"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/licence"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/privacy_policy"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

    </group>

</menu>
