<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_image_from"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnSelectImage"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/gallery"
        android:textColor="@color/green6"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_image"
        app:iconTint="@color/green4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHike" />

    <Button
        android:id="@+id/btnCaptureImage"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/camera"
        android:textColor="@color/green6"
        android:textStyle="bold"
        app:icon="@drawable/baseline_camera_alt_24"
        app:iconTint="@color/green4"

        app:layout_constraintStart_toEndOf="@+id/btnSelectImage"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectImage" />

</LinearLayout>