<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="35dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:layout_margin="10dp">


    <TextView
        android:id="@+id/txtDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/hike_list"
        android:textColor="@color/green6"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryDropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        app:hintEnabled="true"
        app:hintTextColor="@color/green4"
        android:hint="@string/sorting_list"
        app:boxStrokeColor="@color/green6">

        <AutoCompleteTextView
            android:id="@+id/categoryAutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailsRecView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDetail"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/no_hikes_have_been_added_yet"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="gone"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageEmpty"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/img_empty"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnCreateHike"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/green6"
        android:text="@string/create_hike"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_create"
        app:iconTint="@color/white" />

</LinearLayout>



