<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/parent"
    android:checkable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/primary"
    tools:context=".Hike.HikeAdapter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageObservation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:strokeWidth="3dp"
            app:strokeColor="@color/green4"
            app:shapeAppearanceOverlay="@style/RoundedImageViewShape"
            android:padding="3dp"
            app:srcCompat="@drawable/ic_launcher_background"
            android:contentDescription="Image of Observation" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/txtObservationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/observation_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/txtObservationTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/observation_time"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtValueObservationTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:lines="1"
                    android:text="12/03/2002"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtObservationTime" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/additional_comments"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtValueComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="no comment"
                    android:lines="1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/txtComment"
                    app:layout_constraintBottom_toBottomOf="@+id/txtComment"
                    android:layout_marginStart="5dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
